 * Added collapse feature to components.
 * Moved Screen into the plugins system
 * Got reject_with_email screen working. 
 * Fixed bug in mailer which corrupted the message which meant a seg-fault
    when the email got logged.
 * Got reject_with_email and remove_with_email working.
 * Changed email messages to talk of "items" not "eprints"
 * Fixed bug which meant the help toggle didn't work on IE (can't use display
    type of "table-cell")
 * Changed surround title bar to use a div not a table.
 * Added + and - icons to the show/hide help.
 * Moved the help to be inside the toolbox
 * Added seperating lines to multihelp and added names of fields before each
    help section in multi.
 * Added test_config to load a repository but not do anything.

2006-08-03 cjg

 * Moved citations into seperate files for clarity
 * Citations now use new style workflow control
 * Commented out pod for citation methods - they should not be part of the
    API execpt via $dataobjs.
 * Subject now bypasses the citation system to improve the speed of rendering
    the subjects page.

2006-08-04 cjg

 * Tidied up file upload component.
 * Changed coverimage to image (more work needed there)
 * Changed AnApache to have file upload methods in the non-apache specific
    bit, as they are not.
 * Caused object handle to be passed throughout rendering input and from-
    forming of fields.
 * Changed the "prefix" passed around fields into a basename to tie it in with
    the workflow basenames.
 * Added a hacky property to set fields to allow their tags and labels to 
    depend dynamically on the object. Used this for $doc->main
 * Internal buttons can now be images.
 * Made Edit_staff inherit from Edit
 * Made internal buttons in components use #t to keep them on screen.
 * Added method to component that tests if a button was pressed within that
    component.
 * Rendering names for views now obeys render options. 
 * Moved templates into template directory.